Diseño Administracion de ticket, inicio boton ticket, vista previa Imprimir ticket, compradores