@@ -1,56 +1,104 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JPanel.java to edit this template
- */
 package vistas.ticket;
 
 import entidades.TicketCompra;
 import entidades.Comprador;
 import entidades.Pelicula;
+
 import java.util.List;
-import javax.swing.DefaultComboBoxModel;
+import java.util.stream.Collectors;
+
+import javax.swing.DefaultListModel;
 import javax.swing.JOptionPane;
+import javax.swing.event.DocumentEvent;
+import javax.swing.event.DocumentListener;
 import javax.swing.table.DefaultTableModel;
+
 import persistencia.Context;
 import persistencia.TicketCompraData;
 import persistencia.CompradorData;
 import persistencia.PeliculaData;
 
-/**
- *
- * @author Zuñiga Manuel
- */
 public class TicketsView extends javax.swing.JPanel {
 
-    private TicketCompraData ticketData = Context.getTicketCompraData();
-    private CompradorData compradorData = Context.getCompradorData();
-    private PeliculaData peliculaData = Context.getPeliculaData();
+    private final TicketCompraData ticketData = Context.getTicketCompraData();
+    private final CompradorData compradorData = Context.getCompradorData();
+    private final PeliculaData peliculaData = Context.getPeliculaData();
+
+    private List<Comprador> listaCompradores;
 
     public TicketsView() {
         initComponents();
         cargarCompradores();
         cargarPeliculas();
         mostrarTicketsEnTabla(ticketData.listarTodos());
+        configurarAutoCompletar();
     }
 
     private void cargarPeliculas() {
         List<Pelicula> peliculas = peliculaData.obtenerTodas();
-        DefaultComboBoxModel<String> model = new DefaultComboBoxModel<>();
-        model.addElement("Todas");
+        cbxPelicula.removeAllItems();
+        cbxPelicula.addItem("Todas");
+
         for (Pelicula p : peliculas) {
-            model.addElement(p.getTitulo());
+            cbxPelicula.addItem(p.getTitulo());
         }
-        cbxPelicula.setModel(model);
     }
 
     private void cargarCompradores() {
-        List<Comprador> compradores = compradorData.obtenerTodosLosCompradores();
-        DefaultComboBoxModel<String> model = new DefaultComboBoxModel<>();
-        model.addElement("Todos");
-        for (Comprador c : compradores) {
-            model.addElement(c.getNombre());
+        listaCompradores = compradorData.obtenerTodosLosCompradores();
+        actualizarListaSugerencias(
+                listaCompradores.stream()
+                        .map(Comprador::getNombre)
+                        .collect(Collectors.toList())
+        );
+    }
+
+    private void actualizarListaSugerencias(List<String> nombres) {
+        DefaultListModel<String> model = new DefaultListModel<>();
+        for (String n : nombres) {
+            model.addElement(n);
         }
-        cbxComprador.setModel(model);
+        lstComprador.setModel(model);
+    }
+
+    private void configurarAutoCompletar() {
+
+        txtComprador.getDocument().addDocumentListener(new DocumentListener() {
+            @Override
+            public void insertUpdate(DocumentEvent e) {
+                filtrarSugerencias();
+            }
+
+            @Override
+            public void removeUpdate(DocumentEvent e) {
+                filtrarSugerencias();
+            }
+
+            @Override
+            public void changedUpdate(DocumentEvent e) {
+            }
+        });
+
+        lstComprador.addListSelectionListener(e -> {
+            if (!e.getValueIsAdjusting()) {
+                String seleccionado = lstComprador.getSelectedValue();
+                if (seleccionado != null) {
+                    txtComprador.setText(seleccionado);
+                }
+            }
+        });
+    }
+
+    private void filtrarSugerencias() {
+        String texto = txtComprador.getText().trim().toLowerCase();
+
+        List<String> filtrados
+                = listaCompradores.stream()
+                        .map(Comprador::getNombre)
+                        .filter(n -> n.toLowerCase().startsWith(texto))
+                        .collect(Collectors.toList());
+
+        actualizarListaSugerencias(filtrados);
     }
 
     private void mostrarTicketsEnTabla(List<TicketCompra> tickets) {
@@ -74,15 +122,14 @@ public class TicketsView extends javax.swing.JPanel {
 
     private void buscarTickets() {
         String codigo = txtCodigo.getText().trim();
-        String compradorSeleccionado = cbxComprador.getSelectedItem().toString();
-        String peliculaSeleccionada = cbxPelicula.getSelectedItem().toString();
+        String nombreComprador = txtComprador.getText().trim();
+        String peliculaSel = cbxPelicula.getSelectedItem().toString();
 
         if (!codigo.isEmpty()) {
+
             TicketCompra ticket = ticketData.obtenerTicketPorCodigo(codigo);
-
             if (ticket != null) {
-
-                mostrarTicketsEnTabla(java.util.Collections.singletonList(ticket));
+                mostrarTicketsEnTabla(List.of(ticket));
             } else {
                 JOptionPane.showMessageDialog(this, "No se encontró ningún ticket con ese código.");
                 ((DefaultTableModel) tblTickets.getModel()).setRowCount(0);
@@ -90,42 +137,30 @@ public class TicketsView extends javax.swing.JPanel {
             return;
         }
 
-        if (!"Todas".equals(peliculaSeleccionada)) {
-            Pelicula pelicula = null;
-            java.util.List<Pelicula> peliculas = peliculaData.buscarPeliculas(peliculaSeleccionada, null, null);
-            if (peliculas != null && !peliculas.isEmpty()) {
+        if (!nombreComprador.isEmpty()) {
 
-                pelicula = peliculas.stream().findFirst().orElse(null);
-            }
+            List<TicketCompra> todos = ticketData.listarTodos();
+            List<TicketCompra> filtrados = todos.stream()
+                    .filter(t -> {
+                        Comprador c = compradorData.obtenerCompradorPorId(t.getIdComprador());
+                        return c != null && c.getNombre().equalsIgnoreCase(nombreComprador);
+                    })
+                    .collect(Collectors.toList());
 
-            if (pelicula != null) {
-                java.util.List<TicketCompra> tickets = ticketData.listarTicketsPorPelicula(pelicula.getIdPelicula());
-                mostrarTicketsEnTabla(tickets);
-            } else {
-                JOptionPane.showMessageDialog(this, "No se encontró la película seleccionada.");
-                ((DefaultTableModel) tblTickets.getModel()).setRowCount(0);
-            }
+            mostrarTicketsEnTabla(filtrados);
             return;
         }
 
-        if (!"Todos".equals(compradorSeleccionado)) {
-            java.util.List<TicketCompra> todos = ticketData.listarTodos();
-            DefaultTableModel model = (DefaultTableModel) tblTickets.getModel();
-            model.setRowCount(0);
+        if (!"Todas".equals(peliculaSel)) {
 
-            for (TicketCompra t : todos) {
-                Comprador comprador = compradorData.obtenerCompradorPorId(t.getIdComprador());
-                if (comprador != null && comprador.getNombre().equalsIgnoreCase(compradorSeleccionado)) {
-                    model.addRow(new Object[]{
-                        t.getIdTicket(),
-                        t.getCodigoTicket(),
-                        t.getFechaCompra(),
-                        t.getFechaFuncion(),
-                        String.format("$%.2f", t.getMonto()),
-                        comprador.getNombre()
-                    });
-                }
+            List<Pelicula> pelis = peliculaData.buscarPeliculas(peliculaSel, null, null);
+            if (pelis == null || pelis.isEmpty()) {
+                JOptionPane.showMessageDialog(this, "No se encontró la película.");
+                return;
             }
+
+            int id = pelis.get(0).getIdPelicula();
+            mostrarTicketsEnTabla(ticketData.listarTicketsPorPelicula(id));
             return;
         }
 
@@ -161,12 +196,14 @@ public class TicketsView extends javax.swing.JPanel {
         tblTickets = new javax.swing.JTable();
         btnModificar = new javax.swing.JButton();
         btnBuscar = new javax.swing.JButton();
-        cbxComprador = new javax.swing.JComboBox<>();
         lbl3d = new javax.swing.JLabel();
         lblSala = new javax.swing.JLabel();
         lblSubtitulada = new javax.swing.JLabel();
         txtCodigo = new javax.swing.JTextField();
         cbxPelicula = new javax.swing.JComboBox<>();
+        jScrollPane1 = new javax.swing.JScrollPane();
+        lstComprador = new javax.swing.JList<>();
+        txtComprador = new javax.swing.JTextField();
 
         setBackground(new java.awt.Color(33, 33, 33));
 
@@ -243,11 +280,9 @@ public class TicketsView extends javax.swing.JPanel {
             }
         });
 
-        cbxComprador.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Todas", "Si", "No" }));
-
         lbl3d.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
         lbl3d.setForeground(new java.awt.Color(255, 255, 255));
-        lbl3d.setText("Comprador");
+        lbl3d.setText("Comprador:");
 
         lblSala.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
         lblSala.setForeground(new java.awt.Color(255, 255, 255));
@@ -259,33 +294,49 @@ public class TicketsView extends javax.swing.JPanel {
 
         cbxPelicula.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Todas", "Si", "No" }));
 
+        lstComprador.setModel(new javax.swing.AbstractListModel<String>() {
+            String[] strings = { "Item 1", "Item 2", "Item 3", "Item 4", "Item 5" };
+            public int getSize() { return strings.length; }
+            public String getElementAt(int i) { return strings[i]; }
+        });
+        jScrollPane1.setViewportView(lstComprador);
+
+        txtComprador.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
+                txtCompradorActionPerformed(evt);
+            }
+        });
+
         javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
         this.setLayout(layout);
         layout.setHorizontalGroup(
             layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
-                .addGap(20, 20, 20)
+                .addGap(0, 0, Short.MAX_VALUE)
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addComponent(srcProyecciones, javax.swing.GroupLayout.PREFERRED_SIZE, 567, javax.swing.GroupLayout.PREFERRED_SIZE)
                     .addGroup(layout.createSequentialGroup()
-                        .addComponent(lblSala)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                        .addComponent(txtCodigo, javax.swing.GroupLayout.PREFERRED_SIZE, 116, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(18, 18, 18)
                         .addComponent(lbl3d)
-                        .addGap(18, 18, 18)
-                        .addComponent(cbxComprador, javax.swing.GroupLayout.PREFERRED_SIZE, 110, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(18, 18, 18)
+                        .addGap(125, 125, 125)
+                        .addComponent(lblSala)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addComponent(txtCodigo, javax.swing.GroupLayout.PREFERRED_SIZE, 116, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addGap(44, 44, 44)
                         .addComponent(lblSubtitulada, javax.swing.GroupLayout.PREFERRED_SIZE, 48, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(18, 18, 18)
-                        .addComponent(cbxPelicula, javax.swing.GroupLayout.PREFERRED_SIZE, 110, javax.swing.GroupLayout.PREFERRED_SIZE)))
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addComponent(cbxPelicula, javax.swing.GroupLayout.PREFERRED_SIZE, 110, javax.swing.GroupLayout.PREFERRED_SIZE))
+                    .addGroup(layout.createSequentialGroup()
+                        .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING, false)
+                            .addComponent(txtComprador, javax.swing.GroupLayout.DEFAULT_SIZE, 122, Short.MAX_VALUE)
+                            .addComponent(jScrollPane1))
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
+                        .addComponent(srcProyecciones, javax.swing.GroupLayout.PREFERRED_SIZE, 434, javax.swing.GroupLayout.PREFERRED_SIZE)))
+                .addGap(18, 18, Short.MAX_VALUE)
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
                     .addComponent(btnAgregar, javax.swing.GroupLayout.DEFAULT_SIZE, 139, Short.MAX_VALUE)
-                    .addComponent(btnModificar, javax.swing.GroupLayout.PREFERRED_SIZE, 139, Short.MAX_VALUE)
+                    .addComponent(btnModificar, javax.swing.GroupLayout.DEFAULT_SIZE, 139, Short.MAX_VALUE)
                     .addComponent(btnEliminar, javax.swing.GroupLayout.DEFAULT_SIZE, 139, Short.MAX_VALUE)
                     .addComponent(btnBuscar, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addGap(28, 28, 28))
         );
         layout.setVerticalGroup(
             layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
@@ -299,19 +350,23 @@ public class TicketsView extends javax.swing.JPanel {
                         .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                             .addComponent(lblSala)
                             .addComponent(txtCodigo, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(lbl3d)
-                            .addComponent(cbxComprador, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                             .addComponent(lblSubtitulada)
-                            .addComponent(cbxPelicula, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                            .addComponent(cbxPelicula, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addComponent(lbl3d))
                         .addGap(11, 11, 11)))
                 .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
-                        .addComponent(btnAgregar, javax.swing.GroupLayout.PREFERRED_SIZE, 56, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(33, 33, 33)
-                        .addComponent(btnModificar, javax.swing.GroupLayout.PREFERRED_SIZE, 55, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(34, 34, 34)
-                        .addComponent(btnEliminar, javax.swing.GroupLayout.PREFERRED_SIZE, 51, javax.swing.GroupLayout.PREFERRED_SIZE))
-                    .addComponent(srcProyecciones, javax.swing.GroupLayout.PREFERRED_SIZE, 319, javax.swing.GroupLayout.PREFERRED_SIZE))
+                    .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                        .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
+                            .addComponent(btnAgregar, javax.swing.GroupLayout.PREFERRED_SIZE, 56, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addGap(33, 33, 33)
+                            .addComponent(btnModificar, javax.swing.GroupLayout.PREFERRED_SIZE, 55, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addGap(34, 34, 34)
+                            .addComponent(btnEliminar, javax.swing.GroupLayout.PREFERRED_SIZE, 51, javax.swing.GroupLayout.PREFERRED_SIZE))
+                        .addComponent(srcProyecciones, javax.swing.GroupLayout.PREFERRED_SIZE, 319, javax.swing.GroupLayout.PREFERRED_SIZE))
+                    .addGroup(layout.createSequentialGroup()
+                        .addComponent(txtComprador, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addGap(18, 18, 18)
+                        .addComponent(jScrollPane1, javax.swing.GroupLayout.PREFERRED_SIZE, 228, javax.swing.GroupLayout.PREFERRED_SIZE)))
                 .addGap(46, 46, 46))
         );
     }// </editor-fold>//GEN-END:initComponents
@@ -369,19 +424,25 @@ public class TicketsView extends javax.swing.JPanel {
         JOptionPane.showMessageDialog(this, "Los tickets se generan automáticamente al realizar una compra.");
     }//GEN-LAST:event_btnAgregarActionPerformed
 
+    private void txtCompradorActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_txtCompradorActionPerformed
+        // TODO add your handling code here:
+    }//GEN-LAST:event_txtCompradorActionPerformed
+
 
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JButton btnAgregar;
     private javax.swing.JButton btnBuscar;
     private javax.swing.JButton btnEliminar;
     private javax.swing.JButton btnModificar;
-    private javax.swing.JComboBox<String> cbxComprador;
     private javax.swing.JComboBox<String> cbxPelicula;
+    private javax.swing.JScrollPane jScrollPane1;
     private javax.swing.JLabel lbl3d;
     private javax.swing.JLabel lblSala;
     private javax.swing.JLabel lblSubtitulada;
+    private javax.swing.JList<String> lstComprador;
     private javax.swing.JScrollPane srcProyecciones;
     private javax.swing.JTable tblTickets;
     private javax.swing.JTextField txtCodigo;
+    private javax.swing.JTextField txtComprador;
     // End of variables declaration//GEN-END:variables
 }
